# NigPig

./: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/nigpig/: main.go
configs/: config.yaml  default.yaml  scope.example.yaml
configs/profiles/: aggressive.yaml  balanced.yaml  stealth.yaml
docs/: carrot-quickstart.md  scope-management.md  troubleshooting.md
internal/auth/: session.go
internal/cli/: carrot.go  config_lint.go  doctor.go  helpers.go  init.go  root.go  run.go  txtreport.go
internal/config/: config.go
internal/core/: delta.go  pipeline.go  platform.go  time.go  types.go  verify.go
internal/scope/: guard.go
internal/store/: sqlite.go
nigpig/: __init__.py  __main__.py  cli.py  config.py
nigpig/audit/: __init__.py  deps.py  ssl.py
nigpig/discovery/: __init__.py  fuzzer.py  js_analyzer.py  robots.py  sitemap.py  url_utils.py
nigpig/fingerprint/: __init__.py  tech_detect.py  waf_detect.py
nigpig/gui/: __init__.py  app.py  theme.py
nigpig/recon/: __init__.py  dns.py  ports.py  subdomain.py
nigpig/reporting/: __init__.py  generator.py  remediation.py
nigpig/safety/: __init__.py  scope.py
nigpig/scanner/: __init__.py  passive_checks.py  pipeline.py  zap_client.py
nigpig/secrets/: __init__.py  patterns.py  scanner.py
nigpig/storage/: __init__.py  db.py  masking.py
nigpig/templates/: __init__.py  executor.py  loader.py
nigpig/visual/: __init__.py  gallery.py  screenshot.py
nigpig/web/: __init__.py  app.py
nigpig/web/routes/: __init__.py  audit.py  dashboard.py  fingerprint.py  recon.py  secrets_route.py  templates_route.py
nigpig/web/static/: index.html
nigpig/web/static/css/: style.css
nigpig/web/static/js/: app.js
scripts/: install.bat  install.ps1  install.sh
tests/: __init__.py  test_reporting.py  test_scope.py  test_url_utils.py
wordlists/: directories.txt  subdomains.txt
